Added missing part of merge with Siebe's part

--- a/Project/AtariCES.ipynb
+++ b/Project/AtariCES.ipynb
@@ -18,7 +18,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Marlous\\anaconda3\\envs\\natcom\\lib\\site-packages\\gym\\envs\\registration.py:424: UserWarning: \u001b[33mWARN: Custom namespace `ALE` is being overridden by namespace `ALE`. If you are developing a plugin you shouldn't specify a namespace in `register` calls. The namespace is specified through the entry point package metadata.\u001b[0m\n",
+      "  f\"Custom namespace `{spec.namespace}` is being overridden \"\n"
+     ]
+    }
+   ],
    "source": [
     "from model import DQN\n",
     "from AtariCES import AtariCES as CAF"
@@ -62,11 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma = 0.3\n",
+    "sigma = [0.5,0.01] # [start, end] or value\n",
     "n_offspring = 25\n",
     "n_parents = 5\n",
     "iterations = 10\n",
-    "parent_selection = \"tournament\" # \"topn\", random\", \"tournament\""
+    "parent_selection = \"topn\" # \"topn\", random\", \"tournament\"\n",
+    "adaptive_type = 'log' #'constant', 'linear', 'exp', 'log'"
    ]
   },
   {
@@ -220,17 +230,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [09:06<00:00, 21.88s/it]\n"
+      "100%|██████████| 25/25 [08:19<00:00, 19.99s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   0.    0.    0.    0.    0.    0. 1315.    0.    0.    0.    0. 1315.\n",
-      "    0. 1315.    0. 1315.    0.  960. 1315. 1315. 1315.  960. 1315.  960.\n",
+      "[   0. 1140.   40.  200.   85.  910. 1180.  320.  460.  730.  675. 1315.\n",
+      "  660.  860.  780.  720.  895.  570. 1230. 1135.  430.    0. 1335.   95.\n",
       "    0.]\n",
-      "best reward: 1315.0\n",
+      "best reward: 1335.0\n",
       "Iteration:  2\n"
      ]
     },
@@ -238,17 +248,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [08:58<00:00, 21.54s/it]\n"
+      "100%|██████████| 25/25 [08:10<00:00, 19.61s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315. 1080. 1315.    0. 1315.    0.    0. 1315. 1315. 1315. 1315.    0.\n",
-      " 1315. 1315.  960. 1315.    0. 1315. 1315.  960. 1315.    0.    0.    0.\n",
-      "    0.]\n",
-      "best reward: 1315.0\n",
+      "[ 405.  480. 1060.    0.  705. 1350.  520.  610.  235.  945.  370.   90.\n",
+      "  540.  310.  850.  255.  935.    0.   25. 1355.  110.  365.    0.  915.\n",
+      "  390.]\n",
+      "best reward: 1355.0\n",
       "Iteration:  3\n"
      ]
     },
@@ -256,17 +266,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [08:08<00:00, 19.52s/it]\n"
+      "100%|██████████| 25/25 [07:40<00:00, 18.42s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315.  960.  960. 1315. 1315. 1315. 1315. 1315. 1315.  960. 1315. 1315.\n",
-      " 1315. 1315. 1315. 1315. 1315.    0.    0. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315.]\n",
-      "best reward: 1315.0\n",
+      "[ 880.    0.  580.  560.  665.  735. 1000.  800.  250. 1055.  680.  250.\n",
+      "  420.  545.  720.    0.  910.  460.  885.  685.   60.   45.  945.  120.\n",
+      "  760.]\n",
+      "best reward: 1055.0\n",
       "Iteration:  4\n"
      ]
     },
@@ -274,16 +284,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [07:11<00:00, 17.25s/it]\n"
+      "100%|██████████| 25/25 [07:25<00:00, 17.81s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.    0.    0. 1315. 1315.\n",
-      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315.]\n",
+      "[   0.  705.  750.  755. 1090.  930. 1030. 1060.  890.   95.  850.  745.\n",
+      "  885.  960.  300.  655.  480.    0.  250.  740.  565.  125.  610. 1315.\n",
+      "  605.]\n",
       "best reward: 1315.0\n",
       "Iteration:  5\n"
      ]
@@ -292,16 +302,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [07:08<00:00, 17.13s/it]\n"
+      "100%|██████████| 25/25 [08:08<00:00, 19.55s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315.    0.    0. 1315.    0.    0. 1315. 1315. 1315. 1315.  960. 1315.\n",
-      " 1315. 1315.    0. 1315. 1315. 1315.    0.    0.    0.    0. 1315. 1315.\n",
-      " 1315.]\n",
+      "[  95.  780.   15.   10.  900.  615.  640.   15.  250.   90.    0. 1315.\n",
+      "  580.  300.    0.  950.  535.  160.   85.  435.  850.  560. 1310.  170.\n",
+      "  195.]\n",
       "best reward: 1315.0\n",
       "Iteration:  6\n"
      ]
@@ -310,17 +320,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [07:15<00:00, 17.42s/it]\n"
+      "100%|██████████| 25/25 [08:04<00:00, 19.38s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315. 1315. 1315. 1315.    0. 1315.    0. 1315.    0. 1315.    0. 1315.\n",
-      " 1315. 1315. 1315. 1315.    0. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315.]\n",
-      "best reward: 1315.0\n",
+      "[ 950.  290.   45.  960.  760. 1465.  140.  195.  755.  230.  960.   15.\n",
+      "  920.  840.  210.  765.  780.  675.  530.  535.  550. 1045. 1050. 1295.\n",
+      "  785.]\n",
+      "best reward: 1465.0\n",
       "Iteration:  7\n"
      ]
     },
@@ -328,17 +338,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [07:14<00:00, 17.40s/it]\n"
+      "100%|██████████| 25/25 [08:07<00:00, 19.52s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315.]\n",
-      "best reward: 1315.0\n",
+      "[ 300. 1335.   10.  160.  905.  720. 1445.    0.  800.  635.  860.  670.\n",
+      "    0.  565.  285.  840.  325.  720.  495.  435.  575.  155.  405.    0.\n",
+      "  815.]\n",
+      "best reward: 1445.0\n",
       "Iteration:  8\n"
      ]
     },
@@ -346,17 +356,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [07:03<00:00, 16.96s/it]\n"
+      "100%|██████████| 25/25 [07:54<00:00, 19.00s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315.]\n",
-      "best reward: 1315.0\n",
+      "[ 960.  255. 1105.  755.  330.  310.  190.  975.   25. 1505.  180.  230.\n",
+      "  770.  685.  820.  900.  755.  955.  240. 1050.  335.  730.  630. 1325.\n",
+      " 1385.]\n",
+      "best reward: 1505.0\n",
       "Iteration:  9\n"
      ]
     },
@@ -364,17 +374,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [07:10<00:00, 17.20s/it]\n"
+      "100%|██████████| 25/25 [07:58<00:00, 19.13s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1440. 1315. 1315. 1315.  960.\n",
-      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315.]\n",
-      "best reward: 1440.0\n",
+      "[  75.  440.  395.   15.   40.   40.  700.  840.  440. 1110.  720. 1060.\n",
+      "  630.  960.  370.  990. 1405.   10.  270.  105.  960.  510. 1110.   60.\n",
+      " 1020.]\n",
+      "best reward: 1405.0\n",
       "Iteration:  10\n"
      ]
     },
@@ -382,24 +392,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25/25 [07:03<00:00, 16.94s/it]"
+      "100%|██████████| 25/25 [07:45<00:00, 18.62s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315. 1315.\n",
-      " 1315.]\n",
-      "best reward: 1315.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "[ 770.  405. 1315.  140. 1100.  715.  495. 1515.  350.  790.    0.  840.\n",
+      "   25.  695.  385. 1070.   40.  700.  160.    0.   95.    0.  640.  535.\n",
+      "  170.]\n",
+      "best reward: 1515.0\n"
      ]
     }
    ],
@@ -416,9 +419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished\n"
+     ]
+    }
+   ],
    "source": [
     "CAF.show_last(theta, max_step=max_step)"
    ]
@@ -436,9 +447,9 @@
    "hash": "6b3a8bbf377d4ca1530282dfc9385f115aa599de11785bf312b469670b0fb4fa"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:natcom]",
+   "display_name": "Python 3.7.11 ('natcom')",
    "language": "python",
-   "name": "conda-env-natcom-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
