Add ensemble learning

--- a/Project/AtariCES.ipynb
+++ b/Project/AtariCES.ipynb
@@ -16,11 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import DQN, mnih_DQN, rodrigues_DQN\n",
     "from AtariCES import AtariCES as CAF"
    ]
   },
@@ -63,9 +62,9 @@
    "outputs": [],
    "source": [
     "sigma = 0.5\n",
-    "n_offspring = 15\n",
+    "n_offspring = 5\n",
     "n_parents = 3\n",
-    "iterations = 3"
+    "iterations = 1"
    ]
   },
   {
@@ -109,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initiate Model"
+    "## Ensemble Learning"
    ]
   },
   {
@@ -118,49 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rodrigues_DQN(n_actions=n_actions)\n",
-    "print(model.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CAF.set_model(model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "theta, best_rewards, average_rewards, worst_rewards = CAF.CES()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plot results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CAF.plot_rewards(best_rewards, average_rewards, worst_rewards)"
+    "theta_list, model_list, best_reward = CAF.CES()"
    ]
   },
   {
@@ -176,15 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CAF.show_last(theta, max_step=max_step)"
+    "CAF.show_last(theta_list[0], model_list[0], max_step=max_step)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
